frontend/src/components/Link.css
h2 {
    margin: 0;
    font-size: 1.25rem;
    transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
}
p {
    margin-top: 0.5rem;
    margin-bottom: 0;
}
.link {
    list-style: none;
    border: 1px solid rgba(var(--accent), 25%);
    margin: 10px 0;
}
.like-btn {
    background-color: rgba(255 255 255 / 0.5);
}
.like-btn.liked {
    background-color: rgba(var(--accent), 50%);
    color: white;
}
.preview {
    display: flex;
    gap: 20px;
}
.preview img {
    object-fit: cover;
}

